[gd_scene load_steps=5 format=3 uid="uid://bqtu5wqmkhq1c"]

[ext_resource type="Script" uid="uid://cl0tmde8keylr" path="res://admin_action_choise.gd" id="1_qmeby"]
[ext_resource type="Script" uid="uid://bd7k4u3n8385g" path="res://MarginContainer.gd" id="2_h4ugp"]
[ext_resource type="Script" uid="uid://dmcjrwyaqb6vo" path="res://main.gd" id="2_puh7r"]
[ext_resource type="Script" uid="uid://otvyklkchqld" path="res://panel_container.gd" id="3_lcwtf"]

[node name="AdminActionChoice" type="Control"]
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.94
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_qmeby")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="BoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/BoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 6
script = ExtResource("2_h4ugp")

[node name="Strong Action" type="VBoxContainer" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Main" type="CenterContainer" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer/Strong Action"]
layout_mode = 2
script = ExtResource("2_puh7r")

[node name="RichTextLabel" type="Label" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer/Strong Action/Main"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Additionoal" type="CenterContainer" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer/Strong Action"]
layout_mode = 2
script = ExtResource("2_puh7r")

[node name="RichTextLabel" type="Label" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer/Strong Action/Additionoal"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer"]
self_modulate = Color(0.333333, 0.329412, 0.411765, 1)
z_index = 5
layout_mode = 2
script = ExtResource("3_lcwtf")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/BoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 6
script = ExtResource("2_h4ugp")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="FirstAction" type="CenterContainer" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_puh7r")

[node name="RichTextLabel" type="Label" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer2/VBoxContainer/FirstAction"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="SecondAction" type="CenterContainer" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_puh7r")

[node name="RichTextLabel" type="Label" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer2/VBoxContainer/SecondAction"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/BoxContainer/MarginContainer2"]
self_modulate = Color(0.334987, 0.330511, 0.412554, 1)
layout_mode = 2
script = ExtResource("3_lcwtf")
